--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@ img{max-width: 100%; max-height: 100%;}
     background: #ddd;
 } */
 body{
-   background-image:url(images/jiang.jpg) ;
+   background-image:url(https://i.loli.net/2020/03/26/7HjzqdPOEBGYchW.jpg) ;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
